--- a/CSE445_Assignment6/Web.config
+++ b/CSE445_Assignment6/Web.config
@@ -143,5 +143,11 @@
 		  <add name=".svc" verb="*" path="*.svc" type="System.ServiceModel.Activation.ServiceHttpHandlerFactory, System.ServiceModel.Activation,
            Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
 	  </handlers>
+
+	  <defaultDocument enabled="true">
+		  <files>
+			  <add value="Default.aspx" />
+		  </files>
+	  </defaultDocument>
   </system.webServer>
 </configuration>
