Added defaultUrl attribute to Web.config forms section to allow a proper redirect to the members page.

--- a/CSE445_Assignment6/Web.config
+++ b/CSE445_Assignment6/Web.config
@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
-<!-- Also used in Assignment 4 submission -->
 <configuration>
   <appSettings>
 	  <!-- Weather API key -->
@@ -19,7 +18,7 @@
     <httpRuntime targetFramework="4.7.2" maxRequestLength="262144"/>
 
 	<authentication mode="Forms">
-		<forms loginUrl="Pages/Login.aspx" timeout="30" />
+		<forms loginUrl="~/Pages/Login.aspx" defaultUrl="~/Pages/Member.aspx" timeout="30" />
 	</authentication>
 
 	<authorization>
@@ -146,7 +145,7 @@
 
 	  <defaultDocument enabled="true">
 		  <files>
-			  <add value="Default.aspx" />
+			  <add value="~/Pages/Default.aspx" />
 		  </files>
 	  </defaultDocument>
   </system.webServer>
