Fixed TryIt button redirects to properly redirect to the TryIt page

--- a/CSE445_Assignment6/CSE445_Assignment6.csproj
+++ b/CSE445_Assignment6/CSE445_Assignment6.csproj
@@ -84,7 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Code\Account.cs" />
-    <Compile Include="INewService.cs" />
+    <Compile Include="INewsService.cs" />
     <Compile Include="Controls\LoginEventArgs.cs" />
     <Compile Include="Controls\LoginPanel.ascx.cs">
       <DependentUpon>LoginPanel.ascx</DependentUpon>
